# pipeline

./: .coverage  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile-balto  Dockerfile-barney  Dockerfile-elasticc  Dockerfile-elasticc-rf-features  Dockerfile-messi  Dockerfile-toretto  Dockerfile-ztf  Encoder.pt  LICENSE  MANIFEST.in  Makefile  PIPELINE.md  README.md  README.rst  alerts.csv  credentials.py  db_settings.env  dev-requirements.txt  docker-compose.yaml  docker-compose.yml  es_settings.env  features_schema.py  index.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_balto.txt  requirements_dev.txt  requirements_elasticc.txt  requirements_elasticc_transformer_features.txt  requirements_messi.txt  requirements_toretto.txt  requirements_ztf.txt  (+10 more)
alert_archiving_step/: Dockerfile  concat_avros.py  pyproject.toml  setup.py  step.py  upload_to_s3.py
alert_archiving_step/alert_archiving_step/: concat_avros.py  jd.py  step.py  upload_to_s3.py
alert_archiving_step/cli/: alert_archive.py
alert_archiving_step/scripts/: kafka.py  run_multiprocess.py  run_step.py
ci/: .build_state.json  .deploy_state.json  README.md  build.py  build_staging.py  chart_script.py  cli_build.py  cli_deploy.py  cli_update.py  deploy.py  deploy_production.py  deploy_staging.py  main.py  pyproject.toml  ssm.py  utils.py
ci/helm_values/: variables.tf
correction_multistream_ztf_step/: .gitignore  Dockerfile  credentials.py  pyproject.toml  settings.py
correction_multistream_ztf_step/core/: corrector.py
correction_multistream_ztf_step/correction_multistream_ztf_step/: step.py  step_utils.py
correction_multistream_ztf_step/scripts/: config.yaml  run_step.py
correction_multistream_ztf_step/tests/: data.py  data2.py  write_file.py
correction_multisurvey_step/: .gitignore  Dockerfile  README.md  pyproject.toml
correction_multisurvey_step/correction_multisurvey_step/: step.py
correction_multisurvey_step/scripts/: run_step.py
correction_multisurvey_step/tests/: readme.md  write_file.py
correction_step/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  step.py
correction_step/core/: __init__.py  corrector.py
correction_step/tests/: utils.py
delight_step/: pyproject.toml  settings.py
delight_step/delight_step/: __init__.py  database_sql.py  step.py
delight_step/scripts/: run_step.py
early_classification_step/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  settings.py
early_classification_step/earlyclassifier/: step.py
early_classification_step/model/: requirements.txt
early_classification_step/scripts/: run_multiprocess.py  run_step.py
feature_step/: .coverage  .gitignore  Dockerfile  README.md  config3.yaml  config4.yaml  config5.yaml  consolidate_features.py  docker-compose.yml  inspect_simwv5.py  plot_feature_distributions.py  pyproject.toml  read_simwv5_fits.py  requirements.txt  run_tests_all_classes.sh  schema.py  settings.py
feature_step/features/: __init__.py  database.py  step.py  step2.py  step3.py  step4.py
feature_step/scripts/: plot_features_distribution.py  run_step.py
feature_step/tests/: Untitled.ipynb  message_factory.py  message_factory_lsst.py  test_step.py  test_ztf_extractor.py
feature_step/utils/: feature_io.py
ingestion_step/: .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml  settings.py  step.py
ingestion_step/generator/: binary_cutouts.pkl  lsst_alert.py  main.py  readme.md
ingestion_step/ingestion_step/: database.py  step.py
ingestion_step/scripts/: generate_pd_schemas.py  produce_sample.py  run_multiprocess.py  run_step.py  validate.py
ingestion_step/tests/: conftest.py
ingestion_step/utils/: constants.py  old_preprocess.py
lc_classification_step/: .gitignore  Dockerfile  Dockerfile-balto  Dockerfile-barney  Dockerfile-messi  Dockerfile-toretto  Dockerfile-ztf  Dockerfile.balto  Dockerfile.barney  Dockerfile.messi  Dockerfile.mlp  Dockerfile.toretto  Dockerfile.ztf  README.md  docker-compose.yml  models_settings.py  predictor_settings.py  pyproject.toml  requirements.txt  requirements_balto.txt  requirements_barney.txt  requirements_elasticc.txt  requirements_messi.txt  requirements_toretto.txt  requirements_ztf.txt  schemas.py  settings.py
lc_classifier/: pyproject.toml
lightcurve-step/: Dockerfile  LICENSE  README.md  credentials.py  pyproject.toml  requirements.txt  schema.avsc  settings.py
magstats_multisurvey_step/: .gitignore  Dockerfile  pyproject.toml
magstats_step/: .gitignore  Dockerfile  dmdt.py  magstats.py  pyproject.toml  settings.py  step.py
metadata_step/: Dockerfile  credentials.py  pyproject.toml  settings.py
ms_classification_step/: Dockerfile  models_settings.py  pyproject.toml  settings.py
prv_candidates_step/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements_dev.txt  settings.py  step.py
reflector_step/: Dockerfile  README.md  pyproject.toml  settings.py
rubin_stamp_classifier_step/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
s3_step/: Dockerfile  docker-compose.yml  pyproject.toml  s3.py  settings.py  step.py
scribe/: .gitignore  Dockerfile  README.md  credentials.py  pyproject.toml  requirements.txt  settings.py
scribe_multisurvey/: .gitignore  Dockerfile  README.md  credentials.py  pyproject.toml  settings.py
sorting_hat_step/: .coveragerc  .gitignore  Dockerfile  README.md  credentials.py  pyproject.toml  requirements.txt  settings.py  step.py
stamp_classifier_2025_step/: .gitignore  Dockerfile  docker-compose.yml  models_settings.py  pyproject.toml  settings.py
stamp_classifier_step/: .gitignore  Dockerfile-atlas  pyproject.toml  requirements.txt  schema.py  settings.py  step.py
turbo-fats/: .gitignore  pyproject.toml
watchlist_step/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  settings.py  step.py
wl_match_step/: Dockerfile  pyproject.toml
xmatch_step/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  schema.py  settings.py  step.py
(+9068 files in other folders)
