[tool.poetry]
name = "alert-archiving-step"
version = "25.0.1a30"
description = "Group alerts and upload to S3 by date"
authors = ["ALeRCE"]
readme = "README.md"
packages = [{include = "alert_archiving_step"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
apf-base = "1.0.14"
numpy = "^1.25.0"
python-snappy = "^0.6.1"
click = {version = "^8.1.3", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov="*"

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.scripts]
run-step = "scripts.run_step:run_step"
alert_archive = "cli.alert_archive:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
