[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "early_classification_step"
version = "25.0.1a30"
description = "Early Classification Step"
authors = []
readme = "README.md"
packages = [{include = "earlyclassifier"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
apf-base = "1.0.7"
db-plugins = "4.2.7"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[tool.black]
line-length = 88































































































































































[tool.poetry.group.test.dependencies]
coverage = "^7.2.7"
pytest = "^7.4.0"
pytest-docker = "^1.0.1"































































































































































[tool.poetry.group.model.dependencies]
ephem = "3.7.7.0"
absl-py = "0.7.1"
astor = "0.8.0"
astropy = "3.2.1"
bleach = "3.1.0"
certifi = "2019.6.16"
chardet = "3.0.4"
docutils = "0.14"
Flask = "1.0.3"
gast = "0.2.2"
google-pasta = "0.1.7"
grpcio = "1.21.1"
h5py = "2.9.0"
idna = "2.8"
itsdangerous = "1.1.0"
Jinja2 = "3.0"
joblib = "0.13.2"
Keras-Applications = "1.0.8"
Keras-Preprocessing = "1.1.0"
Markdown = "3.1.1"
MarkupSafe = "2.0"
numpy = "^1.16"
pandas = "0.24.2"
pkginfo = "1.5.0.1"
protobuf = "3.8.0"
Pygments = "2.12"
python-dateutil = "2.8.0"
pytz = "2019.1"
readme-renderer = "24.0"
requests = "2.22.0"
requests-toolbelt = "0.9.1"
scikit-learn = "^0.21.2"
scipy = "1.3.0"
six = "1.12.0"
tensorflow = "^1.14.0"
termcolor = "1.1.0"
tqdm = "4.32.1"
twine = "1.13.0"
urllib3 = "1.25.3"
webencodings = "0.5.1"
Werkzeug = "0.15.4"
wrapt = "1.11.2"
matplotlib = "3.1.0"
