[tool.poetry]
name = "feature-step"
version = "27.5.7a30"
description = "Feature step"
authors = ["Ignacio Reyes"]
readme = "README.md"
packages = [{include = "features"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.16"
pandas = "^2.0.1"
lc-classifier = { path = "../lc_classifier", develop = true}
apf_base = { path = "../libs/apf", develop = true }
psycopg2-binary = "^2.9.6"
SQLAlchemy="2.0.19"
db-plugins = { path = "../libs/db-plugins", develop = true }
xmatch-client = { path = "../libs/xmatch_client", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
test_utils = {path = "../libs/test_utils", develop = true}  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
