[tool.poetry]
name = "ingestion-step"
version = "27.4.1a3"
description = "Ingestion step"
authors = []
readme = "README.md"
packages = [{ include = "ingestion_step" }]

[tool.poetry.scripts]
step = { callable = "scripts.run_step:step" }
generate_schemas = { callable = "scripts.generate_pd_schemas:generate" }
produce_sample = { callable = "scripts.produce_sample:produce" }

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
apf_base = { path = "../libs/apf", develop = true }
boto3 = "1.26.69"
confluent_kafka = "2.0.2"
survey-parser-plugins = { path = "../libs/survey_parser_plugins", develop = true }
db-plugins = { path = "../libs/db-plugins-multisurvey", develop = true }
idmapper = { path = "../libs/idmapper", develop = true }
psycopg2-binary = "^2.9.9"
pandas = "^2.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
requests = "^2.31.0"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"
moto = { extras = ["secretsmanager"], version = "^4.1.11" }
db-plugins = { path = "../libs/db-plugins-multisurvey", develop = true }
idmapper = { path = "../libs/idmapper", develop = true }
psycopg2-binary = "*"
test-utils = { path = "../libs/test_utils", develop = true }


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.241126"
black = "^25.1.0"
tqdm = "^4.67.1"


[tool.poetry.group.notebook.dependencies]
notebook = "^7.3.3"
nbclassic = "^1.2.0"
jupyter-console = "^6.6.3"
jupynium = "^0.2.6"
jupytext = "^1.16.7"

[tool.black]
line-length = 79

[tool.pyright]
typeCheckingMode = "strict"
reportConstantRedefinition = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
extraPaths = [
    "../libs/db-plugins-multisurvey/",
    "../libs/test_utils/",
    "../libs/apf/",
    "../libs/survey_parser_plugins/",
    "../libs/idmapper/",
]

[build-system]
requires = ["poetry-core", "cython<3"]
build-backend = "poetry.core.masonry.api"
