[tool.poetry]
name = "lc-classifier"
version = "27.5.7a30"
description = "Lightcurve classifiers and feature computation"
authors = ["Ignacio Reyes Jainaga <ireyes@cmm.uchile.cl>"]
readme = "README.md"
packages = [{include = "lc_classifier"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
astropy = "^6.1"
numba = "^0.59"
numpy = "^1.26"
pyarrow = "^16.0"
scipy = "^1.13"
statsmodels = "^0.14.2"
pandas = "^2.2.2"
celerite2 = "^0.3.1"
extinction = "*"
jax = {version = "^0.4.26", extras = ["cpu"]}
mhps = {path = "../mhps" }
P4J = {path = "../P4J" }
tqdm = "^4.66.2"
matplotlib = "^3.8.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
