[tool.poetry]
name = "lightcurve-step"
version = "1.0.0"
description = "Lightcurve Step"
authors = []
readme = "README.md"
packages = [{include = "lightcurve_step"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
apf-base = "2.4.2"
db-plugins = {git = "https://github.com/alercebroker/db-plugins", rev = "4.2.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-x --cov lightcurve_step --cov-report xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
