[tool.poetry]
name = "lightcurve-step"
version = "25.0.1a30"
description = "Lightcurve Step"
authors = []
readme = "README.md"
packages = [{include = "lightcurve_step"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
apf-base = { path = "../libs/apf", develop = true }
pymongo = "^4.4.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
psycopg2-binary = "^2.9.6"
db-plugins = {path = "../libs/db-plugins", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"
test-utils = { path = "../libs/test_utils", develop = true }

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "-x --cov lightcurve_step --cov-report xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
