[tool.poetry]
name = "magstats-step"
version = "6.2.1a203"
description = ""
authors = ["ASHuenchuleo <arsepulh@gmail.com>", "Pablo Castellanos"]
readme = "README.md"
packages = [{include = "magstats_step"}]

[tool.poetry.dependencies]
python = "^3.10"
apf-base = { path = "../libs/apf", develop = true }
methodtools = "^0.4.7"
numpy = "~1.24.2"
pandas = "~1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-docker = "^1.0.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
