[tool.poetry]
name = "ms-classification-step"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
step = { callable = "scripts.run_step:step" }

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.1"
apf-base = { path = "../libs/apf", develop = true }
numexpr = "^2.8.8"
astropy = "6.1.6"
avro = "^1.12.0"
