[tool.poetry]
name = "prv-candidates-step"
version = "25.0.1a30"
description = "Previous Detections Step"
authors = []
readme = "README.md"
packages = [{include = "prv_candidates_step"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
confluent-kafka = "2.0.2"
apf-base = { path = "../libs/apf", develop = true }
survey-parser-plugins = {path = "../libs/survey_parser_plugins", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-docker = "^1.0.1"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
