[tool.black]
line-length = 79
[tool.poetry]
name = "reflector-step"
version = "6.1.1a34"
description = "Copy data between Kafka topics"
authors = ["alercebroker"]
readme = "README.md"
packages = [{include = "reflector_step"}]

[tool.poetry.dependencies]
python = "^3.9"
apf_base = { path = "../libs/apf", develop = true }
confluent-kafka = { version = "~2.0.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-step = { callable = "scripts.run_step:run_step" }
