[tool.poetry]
name = "rubin-stamp-classifier-step"
version = "0.1.0"
description = ""
authors = ["Francisco Andrades", "Daniel Moreno", "Alejandra Muñoz-Arancibia", "Ignacio Reyes-Jainaga"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
step = { callable = "scripts.run_step:step" }

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = ">=2.2.0,<2.3.0"
numpy = ">=1.26.0,<2.0.0"
tensorflow-cpu = ">=2.18.0,<2.20.0"
apf-base = { path = "../libs/apf", develop = true }
db-plugins =  { path = "../libs/db-plugins-multisurvey", develop = true }
numexpr = "^2.8.8"
astropy = "~=6.1"
avro = "^1.12.0"
alerce_classifiers = { path = "../alerce_classifiers", develop = true, extras = ["stamp_full"] }
psycopg2-binary = ">=2.9.6,<3.0.0"
wget = "^3.2"

[tool.poetry.group.dev.dependencies]
black = "~=23.0"

[tool.poetry.group.rubin.dependencies]
alerce_classifiers = { path = "../alerce_classifiers", develop = true, extras = ["rubin"] }